test/regexp_facade/invalid/InvalidMatchDataConstruction.hx
import ruby.MatchData;

class InvalidMatchDataConstruction {
	static function main():Void {
		new MatchData();
	}
}
